force-app/main/default/objects/White_Space_Configuration__mdt/White_Space_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>White Space Configuration</label>
    <pluralLabel>White Space Configurations</pluralLabel>
</CustomObject>