force-app/main/default/objects/White_Space_Configuration__mdt/fields/Button_Color_Hex__c.field-meta.xml
<CustomField>
    <fullName>Button_Color_Hex__c</fullName>
    <label>Button Color Hex</label>
    <length>255</length>
    <type>Text</type>
</CustomField>