force-app/main/default/objects/White_Space_Configuration__mdt/fields/Disabled_Icon_Color__c.field-meta.xml
<CustomField>
    <fullName>Disabled_Icon_Color__c</fullName>
    <label>Disabled Icon Color</label>
    <length>100</length>
    <type>Text</type>
</CustomField>