force-app/main/default/objects/White_Space_Configuration__mdt/fields/Section_Background_Color__c.field-meta.xml
<CustomField>
    <fullName>Section_Background_Color__c</fullName>
    <label>Section Background Color</label>
    <length>100</length>
    <type>Text</type>
</CustomField>